--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "Nichole Cruzalegui | software engineer (https://cruzn978.github.io/portfolio-website/#/).",
   "main": "index.js",
   "devDependencies": {},
   "keywords": [],
